data/derived/comb/progs/unify/prog3563.ml.out
Characters 81-86:
  digit :: [(n mod 10)];;
  ^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
